# convar-dumper

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  flake.nix  generator.hpp  main.cpp
